# jsvm

./: .gitattributes  .gitignore  README.md  add-header-to-all-files.sh  add-header-to-file.py  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/me/ntrrgc/jsvm/: ExampleInstrumentedTest.java  ExceptionTests.java  JSFunctionTests.java  JSObjectIdentityRace.java  JSObjectTests.java  JSValueTests.java  SealedObjectTests.java  SlowTests.java  StringTests.java  WeakRefExperiment.java
app/src/androidTest/java/me/ntrrgc/jsvm/fastTests/: ExceptionTests.java  JSCallableTests.java  JSFunctionTests.java  JSObjectTests.java  JSTypeErrorTests.java  LibraryTests.java  StringTests.java
app/src/androidTest/java/ntrrgc/me/jsvm/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: JSValue.cpp  JSValue.h  log2.cpp  log2.h  native-lib.cpp  stdafx.h
app/src/main/cpp/duktape/: duk_config.h  duk_source_meta.json  duktape.c  duktape.h
app/src/main/cpp/jsvm/: JSFunction.cpp  JSObject.cpp  JSObject.h  JSVM.cpp  JSVM.h  JSValue.cpp  JSValue.h  ObjectBook.cpp  ObjectBook.h  exceptions.cpp  exceptions.h  invokeSafe.cpp  invokeSafe.h  javaClasses.cpp  javaClasses.h  stashIndices.h  utils.cpp  utils.h
app/src/main/java/me/ntrrgc/jsvm/: AttemptedToUseObjectFromOtherVM.java  InvalidJSValueType.java  JSCallable.java  JSError.java  JSFunction.java  JSObject.java  JSObjectWeakReference.java  JSRuntimeException.java  JSTypeError.java  JSVM.java  JSVMInternalError.java  JSValue.java  MainActivity.java  UsedFinalizedJSObject.java
app/src/main/java/me/ntrrgc/jsvm/accessorChains/: AccessorChain.java  AccessorChainRoot.java  CallNewAccessor.java  ClassChainRoot.java  GlobalScopeChainRoot.java  NewCallAccessor.java  TraversingAccessor.java
app/src/main/java/me/ntrrgc/jsvm/performanceTests/: PerformanceTests.java
app/src/main/java/me/ntrrgc/jsvm/performanceTests/controlGroup/: DummyPOJO.java
app/src/main/java/ntrrgc/me/jsvm/: JSRuntimeException.java  JSVM.java  JSValue.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/raw/: bluebird.js
app/src/test/java/me/ntrrgc/jsvm/: ExampleUnitTest.java
app/src/test/java/ntrrgc/me/jsvm/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
jsvm-lib/: .CMakeLists.txt.swp  CMakeLists.txt  build.gradle  proguard-rules.pro  standalone.build.gradle
jsvm-lib/src/androidTest/java/me/ntrrgc/jsvm/: JSObjectIdentityRace.java  SlowTests.java  TestUtils.java
jsvm-lib/src/androidTest/java/me/ntrrgc/jsvm/fastTests/: ExceptionTests.java  JSCallableTests.java  JSFunctionTests.java  JSObjectTests.java  JSTypeErrorTests.java  JSValueTests.java  JavaStringLength.java  SealedObjectTests.java  StringTests.java
jsvm-lib/src/main/: AndroidManifest.xml
jsvm-lib/src/main/cpp/: stdafx.h
jsvm-lib/src/main/cpp/duktape/: duk_config.h  duk_source_meta.json  duktape.cpp
jsvm-lib/src/main/cpp/jsvm/: JSFunction.cpp  JSFunction.h  JSObject.cpp  JSObject.h  JSVM.cpp  JSValue.cpp  ObjectBook.cpp  ObjectBook.h  exceptions.cpp  invokeSafe.cpp  invokeSafe.h  javaClasses.cpp  javaClasses.h  stashIndices.h  utils.cpp
jsvm-lib/src/main/java/me/ntrrgc/jsvm/: AttemptedToUseObjectFromOtherVM.java  HandleAllocator.java  JSCallable.java  JSError.java  JSFunction.java  JSNativeFunction.java  JSObject.java  JSObjectWeakReference.java  JSTypeError.java  JSVM.java  JSVMBuilder.java  JSVMInternalError.java  JSValue.java  UsedFinalizedJSObject.java
jsvm-lib/src/main/java/me/ntrrgc/jsvm/accessorChains/: AccessorChain.java  AccessorChainRoot.java  CallAccessor.java  CallNewAccessor.java  ClassChainRoot.java  EvalExpressionChainRoot.java  FunctionArgumentChainRoot.java  FunctionThisChainRoot.java  GlobalScopeChainRoot.java  IndexAccessor.java  PropertyAccessor.java  TraversingAccessor.java
jsvm-native/: CMakeLists.txt  build.gradle
jsvm-native/src/androidTest/java/me/ntrrgc/jsvm/: ExampleInstrumentedTest.java
jsvm-native/src/main/: AndroidManifest.xml
jsvm-native/src/main/cpp/: stdafx.h
jsvm-native/src/main/cpp/duktape/: UPDATING.md  duk_config.h  duk_source_meta.json
jsvm-native/src/main/cpp/jsvm/: JSFunction.cpp  JSObject.cpp  JSVM.cpp  JSVM.h  JSValue.cpp  JSValue.h  ObjectBook.cpp  ObjectBook.h  exceptions.h  invokeSafe.cpp  invokeSafe.h  javaClasses.cpp  stashIndices.h  utils.h
jsvm-native/src/main/res/values/: strings.xml
jsvm-native/src/test/java/me/ntrrgc/jsvm/: ExampleUnitTest.java
jsvm-tests/: build.gradle
jsvm-tests/src/androidTest/java/me/ntrrgc/jsvm/: TestUtils.java
jsvm-tests/src/androidTest/java/me/ntrrgc/jsvm/fastTests/: JSCallableTests.java  JSFunctionTests.java  JSTypeErrorTests.java  JSValueTests.java  JavaStringLength.java
jsvm-tests/src/main/: AndroidManifest.xml
jsvm-tests/src/main/java/me/ntrrgc/jsvm/manualTests/: MainActivity.java
jsvm-tests/src/main/java/me/ntrrgc/jsvm/manualTests/performanceTests/: PerformanceTests.java
jsvm-tests/src/main/java/me/ntrrgc/jsvm/manualTests/performanceTests/controlGroup/: DummyPOJO.java
jsvm-tests/src/main/res/layout/: activity_main.xml
jsvm-tests/src/main/res/values/: strings.xml
manualTests/: build.gradle  proguard-rules.pro
manualTests/src/main/: AndroidManifest.xml
manualTests/src/main/java/me/ntrrgc/jsvm/manualTests/: MainActivity.java
manualTests/src/main/java/me/ntrrgc/jsvm/manualTests/performanceTests/: PerformanceTests.java
manualTests/src/main/java/me/ntrrgc/jsvm/manualTests/performanceTests/controlGroup/: DummyPOJO.java
mylibrary/: CMakeLists.txt  build.gradle
mylibrary/src/androidTest/java/me/ntrrgc/mylibrary/: ExampleInstrumentedTest.java
mylibrary/src/main/: AndroidManifest.xml
mylibrary/src/main/cpp/: miau.cpp
mylibrary/src/main/java/me/ntrrgc/mylibrary/: Miau.java
mylibrary/src/test/java/me/ntrrgc/mylibrary/: ExampleUnitTest.java
